[build-system]
requires = [
    "setuptools>=61.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "fronts"
authors = [
    { name = "Gabriel S. Gerlero", email = "ggerlero@cimec.unl.edu.ar" },
]
description = "Numerical library for nonlinear diffusion problems in semi-infinite domains"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "scipy>=1.4.0,<2",
    "numpy>=1,<3",
    "sympy>=1,<2",
    "typing-extensions>=4,<5; python_version<'3.8'",
]
dynamic = ["version"]

[project.optional-dependencies]
examples = ["matplotlib>=3,<4"]

[project.urls]
Homepage = "https://github.com/gerlero/fronts"
Repository = "https://github.com/gerlero/fronts"
Documentation = "https://fronts.readthedocs.io"
Changelog = "https://github.com/gerlero/fronts/blob/main/CHANGELOG.md"

[dependency-groups]
examples = ["fronts[examples]"]
lint = ["ruff"]
typing = [
    "mypy>=1,<2",
    "scipy-stubs; python_version>='3.10'",
]
test = [
    "pytest>=7,<9",
    "pytest-cov",
    "fronts[examples]",
]
docs = [
    "sphinx>=5,<9",
    "sphinx_rtd_theme",
]
dev = [
    {include-group = "examples"},
    {include-group = "lint"},
    {include-group = "typing"},
    {include-group = "test"},
    {include-group = "docs"},
]

[tool.setuptools]
packages = ["fronts"]

[tool.setuptools.dynamic]
version = {attr = "fronts.__version__"}

[tool.ruff.lint]
extend-select = ["ALL"]
extend-ignore = [
    "ARG001",
    "C901",
    "COM812",
    "E501",
    "FBT002",
    "ISC001",
    "N",
    "NPY201",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PYI",
    "S101",
    "SIM105",
    "T201",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
packages = [
    "fronts",
    "tests",
    "symbolic",
]
strict = true
