[build-system]
requires = ["uv_build>=0.9,<0.10"]
build-backend = "uv_build"

[project]
name = "fronts"
version = "1.2.8"
license = "BSD-3-Clause"
authors = [{ name = "Gabriel S. Gerlero", email = "ggerlero@cimec.unl.edu.ar" }]
description = "Numerical library for nonlinear diffusion problems in semi-infinite domains"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "scipy>=1.4.0,<2",
    "numpy>=2,<3",
    "sympy>=1,<2",
]

[project.optional-dependencies]
examples = ["matplotlib>=3,<4"]

[project.urls]
Homepage = "https://github.com/gerlero/fronts"
Repository = "https://github.com/gerlero/fronts"
Documentation = "https://fronts.readthedocs.io"
Changelog = "https://github.com/gerlero/fronts/blob/main/CHANGELOG.md"

[dependency-groups]
examples = ["fronts[examples]"]
lint = ["ruff"]
typing = [
    "mypy>=1,<2",
    "scipy-stubs",
]
test = [
    "pytest>=7,<10",
    "pytest-cov",
    "fronts[examples]",
]
docs = [
    "sphinx>=5,<9",
    "sphinx_rtd_theme",
]
dev = [
    {include-group = "examples"},
    {include-group = "lint"},
    {include-group = "typing"},
    {include-group = "test"},
    {include-group = "docs"},
]

[tool.ruff.lint]
extend-select = ["ALL"]
extend-ignore = [
    "ARG001",
    "C901",
    "COM812",
    "E501",
    "FBT002",
    "ISC001",
    "N",
    "NPY201",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PYI",
    "S101",
    "SIM105",
    "T201",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
packages = [
    "fronts",
    "tests",
    "symbolic",
]
strict = true
