[metadata]
name = fronts
version = 0.9.11-dev0
author = Gabriel S. Gerlero
author_email = ggerlero@cimec.unl.edu.ar
description = Numerical library for nonlinear diffusion problems in semi-infinite domains
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gerlero/fronts
project_urls =
    Documentation = https://fronts.readthedocs.io
    Bug Tracker = https://github.com/gerlero/fronts/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: Libraries
    Operating System :: OS Independent

[options]
packages = fronts
python_requires = >=3.7
install_requires =
    scipy >= 1.4.0
    numpy
    sympy >= 1.0
    importlib_metadata; python_version <= "3.8"

[options.extras_require]
examples =
    matplotlib
test =
    pytest-cov
    check-manifest
    matplotlib
    autograd
doc =
    sphinx
    sphinx_rtd_theme
dev =
    matplotlib
    pytest-cov
    check-manifest
    autograd
    sphinx
    sphinx_rtd_theme
