[metadata]
name = fronts
version = attr: fronts.__version__
author = Gabriel S. Gerlero
author_email = ggerlero@cimec.unl.edu.ar
description = Numerical library for nonlinear diffusion problems in semi-infinite domains
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gerlero/fronts
project_urls =
    Documentation = https://fronts.readthedocs.io
    Bug Tracker = https://github.com/gerlero/fronts/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: Libraries
    Operating System :: OS Independent

[options]
packages = fronts
python_requires = >=3.7
install_requires =
    scipy>=1.4.0,<2
    numpy
    sympy==1.*

[options.extras_require]
examples =
    matplotlib==3.*
test =
    check-manifest
    pytest==7.*
    pytest-cov
    autograd>=1.3,<2
    %(examples)s
doc =
    sphinx
    sphinx_rtd_theme
dev =
    %(examples)s
    %(test)s
    %(doc)s
